<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/card"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_item_avatar"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_alignParentLeft="true"
            style="@style/img"/>
        <TextView
            android:id="@+id/tv_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_item_avatar"
            android:text="@string/ph_id" />
        <TextView
            android:id="@+id/tv_item_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_item_avatar"
            android:layout_below="@id/tv_item_id"
            android:text="@string/ph_email"/>
        <TextView
            android:id="@+id/tv_item_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_item_avatar"
            android:layout_below="@id/tv_item_email"
            android:text="@string/ph_first_name"/>
        <TextView
            android:id="@+id/tv_item_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_item_avatar"
            android:layout_below="@id/tv_item_first_name"
            android:text="@string/ph_last_name"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>