<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/register"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        style="@style/toolbar"/>

    <!--Email-->
    <TextView
        android:id="@+id/tv_register_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_register_email"
        android:layout_toRightOf="@id/img_email"
        android:text="@string/email"
        style="@style/formelement"/>
    <ImageView
        android:id="@+id/img_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_register_password_title"
        android:layout_alignParentLeft="true"
        style="@style/email_credentials"/>
    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_register_password_title"
        android:layout_toRightOf="@id/img_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        style="@style/formelement"/>

    <!--Password-->
    <TextView
        android:id="@+id/tv_register_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_register_password"
        android:layout_toRightOf="@id/img_pass"
        android:text="@string/password"
        style="@style/formelement"/>
    <ImageView
        android:id="@+id/img_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        style="@style/password_credentials"/>
    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/img_pass"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/formelement"/>

    <!--Buttons-->
    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_password"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        style="@style/formelement"/>

    <ProgressBar
        android:id="@+id/pb_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register_register"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>